# hierarchy-rasterizer

./: CMakeLists.txt  README.md  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
diff_gaussian_rasterization/: __init__.py
